{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 16,
  "lineage": "423546a2-cfc7-bfbb-9610-244300c989e9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-05a822e05484c4728",
            "public_dns": "ec2-3-113-160-178.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.113.160.178",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0e073b898567a2600",
            "domain": "vpc",
            "id": "eipalloc-02e70c4c6e2a8ff14",
            "instance": "i-000861996830f283c",
            "network_interface": "eni-0fe4c0fcdd475c96c",
            "private_dns": "ip-10-0-1-10.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-52-198-99-249.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.198.99.249",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_instance.web-server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b2d1589ab1d972c",
            "arn": "arn:aws:ec2:ap-northeast-1:162034130559:instance/i-000861996830f283c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-000861996830f283c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tyanakaz",
            "monitoring": false,
            "primary_network_interface_id": "eni-0fe4c0fcdd475c96c",
            "private_dns": "ip-10-0-1-10.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-3-112-205-34.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.112.205.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-090a48dca4095e6ba",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a4ae4ed0474dde7",
            "tags": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0849a0943a80e3490"
            ]
          },
          "depends_on": [
            "aws_security_group.web-sg",
            "aws_subnet.vpc-1-public-subnet",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-1-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-043d7bbc8f2681755",
            "owner_id": "162034130559",
            "tags": {
              "Name": "vpc-1-igw"
            },
            "vpc_id": "vpc-06b13f56a14127236"
          },
          "depends_on": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-1-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-096506fd528fd1397",
            "owner_id": "162034130559",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-043d7bbc8f2681755",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-1-public-rt"
            },
            "vpc_id": "vpc-06b13f56a14127236"
          },
          "depends_on": [
            "aws_internet_gateway.vpc-1-igw",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-1-rta-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002ee702c4b0b822e",
            "route_table_id": "rtb-096506fd528fd1397",
            "subnet_id": "subnet-02a4ae4ed0474dde7"
          },
          "depends_on": [
            "aws_route_table.vpc-1-public-rt",
            "aws_subnet.vpc-1-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:162034130559:security-group/sg-0849a0943a80e3490",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0849a0943a80e3490",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": null,
            "owner_id": "162034130559",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b13f56a14127236"
          },
          "depends_on": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-1-public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:162034130559:subnet/subnet-02a4ae4ed0474dde7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02a4ae4ed0474dde7",
            "map_public_ip_on_launch": false,
            "owner_id": "162034130559",
            "tags": {
              "Name": "vpc-1-public-subnet"
            },
            "vpc_id": "vpc-06b13f56a14127236"
          },
          "depends_on": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:162034130559:vpc/vpc-06b13f56a14127236",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a3db5e9f6f607c83",
            "default_route_table_id": "rtb-0081737f2f1f7b83f",
            "default_security_group_id": "sg-0f3983be5d9bc4645",
            "dhcp_options_id": "dopt-927df8f5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06b13f56a14127236",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0081737f2f1f7b83f",
            "owner_id": "162034130559",
            "tags": {
              "Name": "vpc-1"
            }
          }
        }
      ]
    }
  ]
}